# vray_for_blender_addon

./: CMakeLists.txt  internal_repo_git_hash.txt  readme.md
cmake/: appsdk_xpak_version.cmake  common_macros.cmake  patch_elf.cmake.in  vfb_macros.cmake  xpak.cmake  xpak_versions.cmake
vray_for_blender_native/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  VRayBlenderLib.manifest  VRayBlenderLib.pyi  vray.icns
vray_for_blender_native/api/: python_api.cpp
vray_for_blender_native/api/interop/: conversion.cpp  conversion.hpp  osl.cpp  osl.h  types.cpp  types.h  utils.hpp
vray_for_blender_native/cmake/: macros.cmake
vray_for_blender_native/export/: plugin_desc.hpp  render_image.cpp  render_image.h  scene_exporter.cpp  scene_exporter.h  scene_exporter_pro.cpp  scene_exporter_pro.h  scene_exporter_rt.cpp  scene_exporter_rt.h  zmq_exporter.cpp  zmq_exporter.h  zmq_server.cpp  zmq_server.h
vray_for_blender_native/export/assets/: blender_types.h  hair_exporter.cpp  hair_exporter.h  mesh_exporter.cpp  mesh_exporter.h  object_exporter.cpp  object_exporter.h  smoke_exporter.cpp  smoke_exporter.h
vray_for_blender_native/utils/: assert.h  file_writer.cpp  file_writer.h  logger.cpp  logger.hpp  mmh3.cpp  mmh3.h  platform.cpp  platform.h  synchronization.hpp  thread_manager.cpp  thread_manager.h  timers.cpp  timers.h
vray_for_blender_python_exporter/: .gitignore  README.md  __init__.py  debug.py  events.py  keymap.py  menu.py  operators.py  osl.py  plugin_json.schema.json  proxy.py  version.py
vray_for_blender_python_exporter/docs/: animation_export.md  command_line.md  json_plugin_description.md  meta_properties.md  nodes.md  sockets.md  ui_templates.md
vray_for_blender_python_exporter/engine/: __init__.py  draw_scheduler.py  render_engine.py  renderer_ipr_base.py  renderer_ipr_vfb.py  renderer_ipr_viewport.py  renderer_preview.py  renderer_prod.py  renderer_prod_base.py  renderer_vantage.py  vfb_event_handler.py  zmq_process.py
vray_for_blender_python_exporter/exporting/: cloud_job.py  cycles_export.py  fur_export.py  hair_export.py  instancer_export.py  light_export.py  log_tools.py  marshaller.py  mtl_export.py  node_export.py  obj_export.py  plugin_tracker.py  settings_export.py  smoke_export.py  tools.py  update_tracker.py  view_export.py  world_export.py
vray_for_blender_python_exporter/exporting/node_exporters/: geometry_node_export.py  material_node_export.py  texture_node_export.py  uvw_node_export.py
vray_for_blender_python_exporter/lib/: __init__.py  attribute_types.py  attribute_utils.py  blender_utils.py  camera_utils.py  class_utils.py  color_utils.py  command_line.py  common_settings.py  condition_processor.py  defs.py  draw_utils.py  export_utils.py  gl_draw.py  image_utils.py  lib_utils.py  lookup_tables.py  mixin.py  motion_blur.py  names.py  path_utils.py  plugin_utils.py  settings_defs.py  sys_utils.py
vray_for_blender_python_exporter/nodes/: __init__.py  color_ramp.py  curves_node.py  customRenderChannelNodes.py  docs.py  filters.py  importing.py  links.py  mixin.py  nodes.py  sockets.py  tools.py  tree.py  tree_defaults.py  utils.py
vray_for_blender_python_exporter/nodes/meta/: __init__.py  image_texture.py  uvw_mapping.py
vray_for_blender_python_exporter/nodes/operators/: __init__.py  add_tree.py  import_file.py  misc.py  sockets.py
vray_for_blender_python_exporter/nodes/specials/: __init__.py  brdf.py  debug.py  effects.py  environment.py  geometry.py  gradient_ramp.py  inputlist.py  material.py  object_properties.py  outputs.py  renderchannels.py  selector.py  texture.py  transform.py
vray_for_blender_python_exporter/overrides/: preview.json  production.json  viewport.json
vray_for_blender_python_exporter/plugins/: __init__.py  skipped_plugins.py
vray_for_blender_python_exporter/plugins/BRDF/: BRDFLayered.py  BRDFLight.py  BRDFSSS2Complex.py  BRDFScanned.py  BRDFToonMtl.py  BRDFVRayMtl.py
vray_for_blender_python_exporter/plugins/camera/: CameraPhysical.py  SettingsCamera.py
vray_for_blender_python_exporter/plugins/channel/: RenderChannelDenoiser.py  RenderChannelLightMix.py  RenderChannelLightSelect.py  RenderChannelMaterialSelect.py  RenderChannelMultiMatte.py  RenderChannelObjectSelect.py  RenderChannelSamplerInfo.py  RenderChannelsPanel.py  render_channel_common.py
vray_for_blender_python_exporter/plugins/effects/: EnvironmentFog.py  SphereFade.py  SphereFadeGizmo.py  VolumeAerialPerspective.py  VolumeVRayToon.py
vray_for_blender_python_exporter/plugins/geometry/: GeomDisplacedMesh.py  GeomHair.py  GeomMeshFile.py  GeomVRayPattern.py  VRayDecal.py  VRayScene.py
vray_for_blender_python_exporter/plugins/light/: LightAmbient.py  LightDome.py  LightIES.py  (+8 more)
vray_for_blender_python_exporter/resources/: VfbDefaultLayers.json  vfbDefaultSettings.json
vray_for_blender_python_exporter/ui/: __init__.py  classes.py  community_edition.py  draw_callbacks.py  icons.py  menus.py  preferences.py  properties_data_camera.py  properties_data_empty.py  properties_data_fur.py  properties_data_geometry.py  properties_data_lamp.py  properties_material.py  properties_object.py  properties_output.py  properties_particles.py  properties_render.py  properties_render_layers.py  properties_texture.py  properties_view_3d.py  properties_world.py
vray_for_blender_python_exporter/utils/: __init__.py  cosmos_handler.py  fur_preview.py  update_checker.py  upgrade_scene.py  utils_bake.py
vray_for_blender_python_exporter/vray_tools/: __init__.py  vray_proxy.py  vrmat_parser.py  vrscene_parser.py
vray_for_blender_zmq_wrapper/: .gitignore  CMakeLists.txt  Makefile  readme.md
vray_for_blender_zmq_wrapper/cmake/: vfb_macros.cmake
vray_for_blender_zmq_wrapper/include/: base_types.h  ipc.h  msg_serializer.hpp  zmq_agent.h  zmq_common.hpp  zmq_deserializer.hpp  zmq_message.hpp  zmq_router.h  zmq_serializer.hpp
vray_for_blender_zmq_wrapper/sources/: ipc.cpp  zmq_agent.cpp  zmq_router.cpp
vray_for_blender_zmq_wrapper/tests/: errors.cpp  happy_path.cpp  ipc.cpp  tools.cpp  tools.hpp
vray_for_blender_zmq_wrapper/utils/: vassert.h
(+789 files in other folders)
